--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <form
       id="userForm"
-      action="https://script.google.com/macros/s/AKfycbwli8XF27KiYCN8v60vWnNp-dyEjAWNR8xmDRBu-sKAM5IPDQSo7FDOSL5ZpDJFx6_lmg/exec"
+      action="https://script.google.com/macros/s/AKfycbwk8DTPwYOSa7fCHeFvE1yvdpjMyneB_IcsinJMUrxiufZgFzj1kPpIlUiMxNizyyIrsg/exec"
       method="post"
     >
       <h2>①イベントで使用する参加名を入力してください</h2>
@@ -115,5 +115,86 @@
           });
       });
     </script>
+      <nav>
+    <ui class="menu">
+      <li>
+        <a href=""
+          ><i class="fa-solid fa-house"></i><br /><span class="iconname"
+            >ホーム</span
+          ></a
+        >
+      </li>
+      <li>
+        <a href=""
+          ><i class="fa-solid fa-location-dot"></i><br /><span class="iconname"
+            >マップ</span
+          ></a
+        >
+      </li>
+      <li>
+        <a
+          href="
+        https://liff.line.me/2007108080-jR8JqOgX"
+          ><i class="fa-solid fa-location-pin"></i><br /><span class="iconname"
+            >スタンプ獲得</span
+          ></a
+        >
+      </li>
+      <li>
+        <a href="https://chikarauemori.github.io/test60/"
+          ><i class="fa-solid fa-circle-user"></i><br /><span class="iconname"
+            >マイページ</span
+          ></a
+        >
+      </li>
+  </nav>
+<style>
+            @media screen and (max-width: 768px) {
+      * {
+      font-size:80% ; /* スマホではフォントサイズを小さくする */
+      }
+      }
+      .menu {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        background: white;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        padding: 10px 0;
+        box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+      }
+
+      .menu li {
+        display: inline-block;
+        text-align: center;
+      }
+
+      .menu a {
+        text-decoration: none;
+        color: black;
+      }
+
+      .menu a i {
+        font-size: 24px;
+      }
+
+      .menu a span {
+        display: block;
+        font-size: 12px; /* テキストサイズ */
+        margin-top: 5px;
+      }
+
+      @media (max-width: 768px) {
+        .menu {
+          display: grid;
+          grid-template-columns: repeat(4, 1fr);
+        }
+
+        .menu li {
+          padding: 5px;
+        }
+      }
   </body>
 </html>
