--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     />
   </head>
   <body>
+          <h1>
+        <img
+          src="https://i.ibb.co/Wv8X3LVh/1.png"
+          alt="IMG-5451"
+          width="100px"
+          height="100px"
+        />
+        クールシェア宝塚2025<br />
+        スタンプラリーカード
+      </h1>
     <form
       id="userForm"
       action="https://script.google.com/macros/s/AKfycbwk8DTPwYOSa7fCHeFvE1yvdpjMyneB_IcsinJMUrxiufZgFzj1kPpIlUiMxNizyyIrsg/exec"
