--- a/index.html
+++ b/index.html
@@ -214,5 +214,17 @@
           padding: 5px;
         }
       }
+
+          h1 {
+        font-family: sans-serif;
+        display: flex;
+        align-items: center; /* 縦方向の中央揃え */
+        justify-content: center; /* 横方向の中央揃え */
+        text-align: center;
+        background: skyblue;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 20px;
+      }
   </body>
 </html>
