--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </h1>
     <form
       id="userForm"
-      action="https://script.google.com/macros/s/AKfycbxc2SKFNjuGi-EoBN6EjB1fuHsCItpDt1e4xa8LIdBy4jNNkg8p2P3ZY4BqQphM9pwftw/exec"
+      action="https://script.google.com/macros/s/AKfycbw0uiHblJKtUijFbY-J7ug1p5WaivNvrcc2hfQ2LyWOQCcG-VCQesPDN0lFTNQ-dBKZ/exec"
       method="post"
     >
       <h2>①イベントで使用する参加名を入力してください</h2>
@@ -35,7 +35,7 @@
 
       <h3>
         本名でなくて大丈夫です👌<br />
-        お好き名前でご参加ください！!
+        お好きな名前でご参加ください！!
       </h3>
 
       <h2>②性別を教えてください</h2>
