--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       src="https://kit.fontawesome.com/d0a601627a.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://yubinbango.github.io/yubinbango/yubinbango.js"
+      charset="UTF-8"
+    ></script>
     <link
       href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
       rel="stylesheet"
@@ -24,11 +28,16 @@
         クールシェア宝塚2025<br />
         スタンプラリーカード
       </h1>
-    <form
+      <h3>個人情報の取り扱いについて
+        <h4 class="information">アンケートにてご提供いただいた個人情報は、<br>本イベント及び、景品当選時にのみ使用します。<br>第三者に提供されることはありません。</h4></h3>
+      <form
       id="userForm"
-      action="https://script.google.com/macros/s/AKfycbxf1Zyl6uE6WAOTTbzMPxVe4KBLKn3MCSNFH6cbPMjA-IZK7KtsexBorI4HxEI2vfDo_g/exec"
+      action="https://script.google.com/macros/s/AKfycbz-vJIRa8pVIK_ujtjPlwVUAczDibkkZgo38bbeXWTv7xb_lxnphfk4uKM988n8dO4X5Q/exec"
       method="post"
+      class="h-adr"
+
     >
+      <span class="p-country-name" style="display: none">Japan</span>
       <h2>①イベントで使用する参加名を入力してください</h2>
 
       <input type="text" name="name" id="name" />
@@ -91,48 +100,65 @@
       <input type="hidden" name="sexList" id="sexList" />
       <input type="hidden" name="ageList" id="ageList" />
       <input type="hidden" name="occupationList" id="occupationList" />
-      <button type="submit">ユーザー登録</button>
+      
+      <h2>⑤住所を入力してください</h2>
+      〒<input
+        type="text"
+        name="address-1"
+        id="address-1"
+        class="p-postal-code"
+        size="3"
+        maxlength="3"
+      />
+      -
+      <input
+        type="text"
+        name="address-2"
+        id="address-2"
+        class="p-postal-code"
+        size="4"
+        maxlength="4"
+      /><br />
+      都道府県:<input
+        type="text"
+        name="address-3"
+        id="address-3"
+        class="p-region"
+      /><br />
+      地区町村:<input
+        type="text"
+        name="address-4"
+        id="address-4"
+        class="p-locality"
+      /><br />
+      町名:<input
+        type="text"
+        name="address-5"
+        id="address-5"
+        class="p-street-address p-extended-address"
+      /><br />
+      番地:<input type="text" name="address-6" id="address-6" />
+      <h2>⑥日中繋がる連絡先を入力してください</h2>
+      <input type="text" name="phoneNumber" id="phoneNumber" /><br>
+      <button type="submit" value>ログインされていません</button>
     </form>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      
 
-    <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
-    <script>
-      liff
-        .init({
-          liffId: "2007154146-Y5jGo0G3", // あなたのLIFF ID
-        })
-        .catch((err) => {
-          console.log(err);
-        });
 
-      liff.ready.then(() => {
-        if (!liff.isLoggedIn()) {
-          liff.login();
-        }
 
-        // ユーザープロフィール情報を取得
-        liff
-          .getProfile()
-          .then((profile) => {
-            const userId = profile.userId; // ユーザーIDを取得
 
-            // ユーザーIDを非表示のinputフィールドとしてフォームに追加
-            const userIdField = document.createElement("input");
-            userIdField.type = "hidden"; // 見えないフィールドとして設定
-            userIdField.name = "userId"; // サーバー側で受け取る名前を指定
-            userIdField.value = userId; // ユーザーIDの値をセット
 
-            // フォームにuserIdフィールドを追加
-            document.getElementById("userForm").appendChild(userIdField);
-
-            // 必要に応じてボタンのテキストを変更する
-            const submitButton = document.querySelector("button");
-            submitButton.textContent = "ユーザー登録";
-          })
-          .catch((err) => {
-            console.log("プロフィール取得エラー: ", err);
-          });
-      });
-    </script>
+ 
       <nav>
     <ui class="menu">
       <li>
@@ -166,12 +192,48 @@
         >
       </li>
   </nav>
+  <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
+<script>
+  liff
+    .init({
+      liffId: "2007154146-Y5jGo0G3", // あなたのLIFF ID
+    })
+    .catch((err) => {
+      console.log(err);
+    });
+
+  liff.ready.then(() => {
+    if (!liff.isLoggedIn()) {
+      liff.login();
+    }
+
+    // ユーザープロフィール情報を取得
+    liff
+      .getProfile()
+      .then((profile) => {
+        const userId = profile.userId; // ユーザーIDを取得
+
+        // ユーザーIDを非表示のinputフィールドとしてフォームに追加
+        const userIdField = document.createElement("input");
+        userIdField.type = "hidden"; // 見えないフィールドとして設定
+        userIdField.name = "userId"; // サーバー側で受け取る名前を指定
+        userIdField.value = userId; // ユーザーIDの値をセット
+
+        // フォームにuserIdフィールドを追加
+        document.getElementById("userForm").appendChild(userIdField);
+
+        // 必要に応じてボタンのテキストを変更する
+        const submitButton = document.querySelector("button");
+        submitButton.textContent = "ユーザー登録";
+      })
+      .catch((err) => {
+        console.log("プロフィール取得エラー: ", err);
+      });
+  });
+</script>
 <style>
-            @media screen and (max-width: 768px) {
-      * {
-      font-size:80% ; /* スマホではフォントサイズを小さくする */
-      }
-      }
+
+
       .menu {
         position: fixed;
         left: 0;
@@ -222,9 +284,24 @@
         justify-content: center; /* 横方向の中央揃え */
         text-align: center;
         background: skyblue;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        padding-left: 20px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 10px;
+        font-size: 85%;
       }
+
+      input {
+        font-size: 200%;
+        background: skyblue;
+      }
+
+      button {
+        font-size: 200%;
+      }
+      .information{
+        border-style: dotted;
+        display: inline-block;
+      }
+      </style>
   </body>
 </html>
